--- a/index.html
+++ b/index.html
@@ -1,12 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    <h1>Hello</h1>
-</body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+
+  <body>
+    <nav class="active">
+      <ul class="nav-list">
+        <a href="#"> <li class="nav-item">Home</li></a>
+        <a href="#"> <li class="nav-item">Blog</li> </a>
+        <a href="#"> <li class="nav-item">About</li> </a>
+        <a href="#"> <li class="nav-item">Contact</li> </a>
+      </ul>
+    </nav>
+    <section id=""></section>
+  </body>
 </html>
