--- a/index.html
+++ b/index.html
@@ -5,11 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
     <link rel="stylesheet" href="style.css" />
   </head>
 
   <body>
-    <nav class="active">
+    <nav>
       <ul class="nav-list">
         <a href="#"> <li class="nav-item">Home</li></a>
         <a href="#"> <li class="nav-item">Blog</li> </a>
@@ -17,6 +22,22 @@
         <a href="#"> <li class="nav-item">Contact</li> </a>
       </ul>
     </nav>
-    <section id=""></section>
+    <button class="ham fa fa-bars"></button>
+    <main>
+      <section id="">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt beatae in
+        commodi soluta magni at ipsam, repellendus alias, magnam hic suscipit
+        ducimus, reiciendis optio sint laboriosam explicabo voluptate earum
+        eveniet eius repudiandae. Quis, debitis ab. Quisquam, nostrum? Aliquid,
+        ullam. Sed at iste iure omnis dolores, amet corporis vel dolore dicta
+        voluptates ex illo nam? Reprehenderit excepturi consequatur quod quas
+        minima! Itaque voluptatum beatae unde non ducimus nostrum enim dolor,
+        perferendis, temporibus numquam illum quibusdam dicta. Alias, fugiat?
+        Cum eum praesentium in architecto at molestiae, modi suscipit recusandae
+        fuga! Ipsa facere deleniti facilis nobis quas perferendis et incidunt ut
+        dignissimos aut.
+      </section>
+    </main>
   </body>
+  <script src="app.js"></script>
 </html>
