--- a/index.html
+++ b/index.html
@@ -24,18 +24,57 @@
     </nav>
     <button class="ham fa fa-bars"></button>
     <main>
-      <section id="">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt beatae in
-        commodi soluta magni at ipsam, repellendus alias, magnam hic suscipit
-        ducimus, reiciendis optio sint laboriosam explicabo voluptate earum
-        eveniet eius repudiandae. Quis, debitis ab. Quisquam, nostrum? Aliquid,
-        ullam. Sed at iste iure omnis dolores, amet corporis vel dolore dicta
-        voluptates ex illo nam? Reprehenderit excepturi consequatur quod quas
-        minima! Itaque voluptatum beatae unde non ducimus nostrum enim dolor,
-        perferendis, temporibus numquam illum quibusdam dicta. Alias, fugiat?
-        Cum eum praesentium in architecto at molestiae, modi suscipit recusandae
-        fuga! Ipsa facere deleniti facilis nobis quas perferendis et incidunt ut
-        dignissimos aut.
+      <section id="First">
+        <img class="imagex" src="https://placehold.it/150x150" alt="" />
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt beatae
+          in commodi soluta magni at ipsam, repellendus alias, magnam hic
+          suscipit ducimus, reiciendis optio sint laboriosam explicabo voluptate
+          earum eveniet eius repudiandae. Quis, debitis ab. Quisquam, nostrum?
+          Aliquid, ullam. Sed at iste iure omnis dolores, amet corporis vel
+          dolore dicta voluptates ex illo nam? Reprehenderit excepturi
+          consequatur quod quas minima! Itaque voluptatum beatae unde non
+          ducimus nostrum enim dolor, perferendis, temporibus numquam illum
+          quibusdam dicta. Alias, fugiat? Cum eum praesentium in architecto at
+          molestiae, modi suscipit recusandae fuga! Ipsa facere deleniti facilis
+          nobis quas perferendis et incidunt ut dignissimos aut.
+        </p>
+      </section>
+      <section id="Second">
+        <img class="imagex" src="https://placehold.it/150x150" alt="" />
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem fuga
+          autem in quos eum. Voluptate atque repellendus minima velit laudantium
+          a distinctio temporibus modi magnam consequuntur totam, beatae
+          officiis necessitatibus illum est quo, ad, delectus deserunt.
+          Perferendis sed laboriosam enim optio iste rem laborum eum maxime,
+          illo non impedit neque accusamus architecto recusandae reiciendis
+          eaque, odio suscipit incidunt, quo voluptatum!
+        </p>
+      </section>
+      <section id="Third">
+        <img class="imagex" src="https://placehold.it/150x150" alt="" />
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem fuga
+          autem in quos eum. Voluptate atque repellendus minima velit laudantium
+          a distinctio temporibus modi magnam consequuntur totam, beatae
+          officiis necessitatibus illum est quo, ad, delectus deserunt.
+          Perferendis sed laboriosam enim optio iste rem laborum eum maxime,
+          illo non impedit neque accusamus architecto recusandae reiciendis
+          eaque, odio suscipit incidunt, quo voluptatum!
+        </p>
+      </section>
+      <section id="#Fourth">
+        <img class="imagex" src="https://placehold.it/150x150" alt="" />
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem fuga
+          autem in quos eum. Voluptate atque repellendus minima velit laudantium
+          a distinctio temporibus modi magnam consequuntur totam, beatae
+          officiis necessitatibus illum est quo, ad, delectus deserunt.
+          Perferendis sed laboriosam enim optio iste rem laborum eum maxime,
+          illo non impedit neque accusamus architecto recusandae reiciendis
+          eaque, odio suscipit incidunt, quo voluptatum!
+        </p>
       </section>
     </main>
   </body>
